# mlops_cookiecutter_exercises

./: README.md  cloudbuild.yaml  data.dvc  environment.yaml  pyproject.toml  requirements.txt  tasks.py
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
.github/workflows/: tests.yaml
configs/: sweep.yaml
dockerfiles/: api.dockerfile  evaluate.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
models/: model.pth  trained_model_docker.pth
src/s2_cookiecutter/: data.py  evaluate.py  train.py  visualize.py
tests/: test_data.py  test_model.py
wandb/: latest-run
wandb/run-20250109_130559-6ujqotom/: run-6ujqotom.wandb
wandb/run-20250109_131306-pm8tdj56/: run-pm8tdj56.wandb
wandb/run-20250109_131402-b438t32t/: run-b438t32t.wandb
wandb/run-20250109_132000-olorrxxr/: run-olorrxxr.wandb
wandb/run-20250109_132315-ktvmv6x8/: run-ktvmv6x8.wandb
wandb/run-20250109_132554-i7fw1ud5/: run-i7fw1ud5.wandb
wandb/run-20250109_133305-jk89a9pa/: run-jk89a9pa.wandb
wandb/run-20250109_133355-fd7mlgq0/: run-fd7mlgq0.wandb
wandb/run-20250109_133618-x9qu0t5m/: run-x9qu0t5m.wandb
wandb/run-20250109_133911-04st30gm/: run-04st30gm.wandb
wandb/run-20250109_134056-gq82lgms/: run-gq82lgms.wandb
wandb/run-20250109_134420-4t65qzo6/: run-4t65qzo6.wandb
wandb/run-20250109_210949-52asvjzk/: run-52asvjzk.wandb
wandb/run-20250109_211046-7h2hc628/: run-7h2hc628.wandb
wandb/run-20250109_211128-h0iswh1h/: run-h0iswh1h.wandb
wandb/run-20250109_211210-exjsy0di/: run-exjsy0di.wandb
wandb/sweep-litlj8rq/: config-0bc91z4m.yaml  (+9 more)
(+76 files in other folders)
